fix image and css links

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Grimm's Fairy Tales</title>
-    <link rel="stylesheet" href="/styles/styles.css"/>
-    <link rel="normalize" href="/css/normalize.css"/>
+    <link rel="stylesheet" href="./styles/styles.css"/>
+    <link rel="normalize" href="./css/normalize.css"/>
 </head>
 <body>
     <header>
@@ -38,7 +38,7 @@
         <section>
             <h3>Chapter 2:</h3>
             <h4>The Thief</h4>
-            <img src="/images/theif.png"/>
+            <img src="./images/theif.jpeg"/>
             <p> 
                 Then each of them went his way, and the eldest met a man who asked
                 him where he was going, and what he was intending to do. "I want to
@@ -56,7 +56,7 @@
         <section>
             <h3>Chapter 3:</h3>
             <h4>The Astronomer</h4>
-            <img src="/images/astronomer.png"/>
+            <img src="./images/astronomer.png"/>
             <p>    
                 The second brother met a man who put the same question to him - what
                 he wanted to learn in the world.  "I don't know yet," he replied.
