--- a/index.html
+++ b/index.html
@@ -10,238 +10,26 @@
 </head>
 <body>
     <header>
-        <h1 class="logo">A Grimm's Fairy Tale</h1>
+        <div class="logo"><img src="./images/logo.png"></div>
         <nav>
-            <h3>Chapters</h3> 
-            <h3>Summary</h3>
-            <h3>More Stories</h3>
+            <h3><a href="./html/about-us.html">About Us</a></h3> 
+            <h3><a href="./html/chapter.html">Chapters</a></h3> 
+            <h3><a href="./html/stories.html">More Stories</a></h3>
         </nav>
-        <h2 class="title">The Four Skillfull Brothers</h2>
     </header>
     <main>
         <section>
-            <h3>Chapter 1:</h3>
-            <h4>Once Upon a Time</h4>
-            <p> 
-                There was once a poor man who had four sons, and when they were grown
-                up, he said to them, "My dear children, you must now go out into the
-                world, for I have nothing to give you, so set out, go abroad and
-                learn a trade, and see how you can make your way." So the four
-                brothers took their sticks, bade their father farewell, and went
-                through the town-gate together.  When they had traveled about for
-                some time, they came to a crossroads which branched off in four
-                different directions.  Then said the eldest, "Here we must separate,
-                but on this day four years hence, we will meet each other again at
-                this spot, and in the meantime we will seek our fortunes."
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 2:</h3>
-            <h4>The Thief</h4>
-            <img src="./images/theif.jpeg"/>
-            <p> 
-                Then each of them went his way, and the eldest met a man who asked
-                him where he was going, and what he was intending to do. "I want to
-                learn a trade," he replied.  Then the other said, "Come with me," and
-                be a thief.  "No," he answered, "that is no longer regarded as a
-                reputable trade, and the end of it is that one has to swing on the
-                gallows." "Oh," said the man, "you need not be afraid of the gallows,
-                I will only teach you to get such things as no other man could ever
-                lay hold of, and no one will ever detect you." So he allowed himself
-                to be talked into it, and while with the man became an accomplished
-                thief, and so dexterous that nothing was safe from him, if he once
-                desired to have it.
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 3:</h3>
-            <h4>The Astronomer</h4>
-            <img src="./images/astronomer.png"/>
-            <p>    
-                The second brother met a man who put the same question to him - what
-                he wanted to learn in the world.  "I don't know yet," he replied.
-                "Then come with me, and be an astronomer, there is nothing better
-                than that, for nothing is hid from you." He liked the idea, and
-                became such a skillful astronomer that when he had learnt everything,
-                and was about to travel onwards, his master gave him a telescope and
-                said to him, "With that you can see whatsoever takes place either on
-                earth or in heaven, and nothing can remain concealed from you."
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 4:</h3>
-            <h4>The Huntsman and the Tailor</h4>
-            <p>    
-                A huntsman took the third brother into training, and gave him such
-                excellent instruction in everything which related to huntsmanship
-                that he became an experienced hunter.  When he went away, his master
-                gave him a gun and said, "It will never fail you, whatsoever you aim
-                at, you are certain to hit." The youngest brother also met a man who
-                spoke to him, and inquired what his intentions were.  "Would you not
-                like to be a tailor?" said he.  "Not that I know of," said the youth,
-                "sitting doubled up from morning till night, driving the needle and
-                the goose backwards and forwards, is not to my taste." "Oh, but you
-                are speaking in ignorance," answered the man.  "With me you would
-                learn a very different kind of tailoring, which is respectable and
-                proper, and for the most part very honorable." So he let himself be
-                persuaded, and went with the man, and learnt his art from the very
-                beginning.  When they parted, the man gave the youth a needle, and
-                said, "With this you can sew together whatever is given you, whether
-                it is as soft as an egg or as hard as steel, and it will all become
-                one piece of stuff, so that no seam will be visible."
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 5:</h3>
-            <h4>Family Reunion</h4>
-            <p>    
-                When the appointed four years were over, the four brothers arrived at
-                the same time at the cross-roads, embraced and kissed each other, and
-                returned home to their father.  "So now," said he, quite delighted,
-                "the wind has blown you back again to me." They told him of all that
-                had happened to them, and that each had learnt his own trade.  Now
-                they were sitting just in front of the house under a large tree, and
-                the father said, "I will put you all to the test, and see what you
-                can do." Then he looked up and said to his second son, "Between two
-                branches up at the top of this tree, there is a chaffinch's nest,
-                tell me how many eggs there are in it." The astronomer took his
-                glass, looked up and said, "There are five." Then the father said to
-                the eldest, "Fetch the eggs down without disturbing the bird which is
-                sitting hatching them." The skillful thief climbed up, and took the
-                five eggs from beneath the bird, which never observed what he was
-                doing, and remained quietly sitting where she was, and brought them
-                down to his father.
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 6:</h3>
-            <h4>Demostration of Skills</h4>
-            <p>   
-                The father took them, and put one of them on each corner of the
-                table, and the fifth in the middle, and said to the huntsman, "With
-                one shot you shall shoot me the five eggs in two, through the
-                middle." The huntsman aimed, and shot the eggs, all five as the
-                father had desired, and that at one shot.  He certainly must have had
-                some of the powder for shooting round corners.  "Now it's your turn,"
-                said the father to the fourth son, "You shall sew the eggs together
-                again, and the young birds that are inside them as well, and you must
-                do it so that they are not hurt by the shot." The tailor brought his
-                needle, and sewed them as his father wished.  When he had done this
-                the thief had to climb up the tree again, and carry them to the nest,
-                and put them back again under the bird without her being aware of it.
-                The bird sat her full time, and after a few days the young ones crept
-                out, and they had a red line round their necks where they had been
-                sewn together by the tailor.
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 7:</h3>
-            <h4>A Fathers Praise</h4>
-            <p>    
-                "Well," said the old man to his sons, "you really ought to be praised
-                to the skies, you have used your time well, and learnt something
-                good.  I can't say which of you deserves the most praise. That will
-                be proved if you have but an early opportunity of using your
-                talents." Not long after this, there was a great uproar in the
-                country, for the king's daughter was carried off by a dragon. The
-                king was full of trouble about it, both by day an night, and caused
-                it to be proclaimed that whosoever brought her back should have her
-                to wife.
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 8:</h3>
-            <h4>Finding the King's Daughter</h4>
-            <p>    
-                The four brothers said to each other, "This would be a fine
-                opportunity for us to show what we can do." And resolved to go forth
-                together and liberate the king's daughter. "I will soon know where
-                she is," said the astronomer, and looked through his telescope and
-                said, "I see her already, she is far away from here on a rock in the
-                sea, and the dragon is beside her watching her."
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 9:</h3>
-            <h4>Liberating the Princess</h4>
-            <p>    
-                Then he went to the king, and asked for a ship for himself and his
-                brothers, and sailed with them over the sea until they came to the
-                rock.  There the king's daughter was sitting, and the dragon was
-                lying asleep on her lap.  The huntsman said, "I dare not fire, I
-                should kill the beautiful maiden at the same time." "Then I will try
-                my art," said the thief, and he crept thither and stole her away from
-                under the dragon, so quietly and dexterously, that the monster never
-                noticed it, but went on snoring.
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 10:</h3>
-            <h4>Dragons Rage</h4>
-            <p>    
-                Full of joy, they hurried off with her on board ship, and steered out
-                into the open sea, but the dragon, who when he awoke had found no
-                princess there, followed them, and came snorting angrily through the
-                air.  Just as he was circling above the ship, and about to descend on
-                it, the huntsman shouldered his gun, and shot him to the heart.  The
-                monster fell down dead, but was so large and powerful that his fall
-                shattered the whole ship.  Fortunately, however, they laid hold of a
-                couple of planks, and swam about the wide sea.
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 11:</h3>
-            <h4>Lost at Sea</h4>
-            <p>    
-                Then again they were in great peril, but the tailor, who was not
-                idle, took his wondrous needle, and with a few stitches sewed the
-                planks together and they seated themselves upon them, and collected
-                together all the fragments of the vessel.  Then he sewed these so
-                skillfully together, that in a very short time the ship was once more
-                seaworthy, and they could go home again in safety.
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 12:</h3>
-            <h4>Arguing over the Bride</h4>
-            <p>    
-                When the king once more saw his daughter, there were great
-                rejoicings.  He said to the four brothers, one of you shall have her
-                to wife, but which of you it is to be you must settle among
-                yourselves.  Then a heated argument arose among them, for each of
-                them preferred his own claim.  The astronomer said, "If I had not
-                seen the princess, all your arts would have been useless, so she is
-                mine." The thief said, "What would have been the use of your seeing,
-                if I had not got her away from the dragon.  So she is mine." The
-                huntsman said, "You and the princess, and all of you, would have been
-                torn to pieces by the dragon if my ball had not hit him, so she is
-                mine." The tailor said, "And if I, by my art, had not sewn the ship
-                together again, you would all of you have been miserably drowned, so
-                she is mine."
-            </p>
-        </section>
-        <section>
-            <h3>Chapter 13:</h3>
-            <h4>A Happy Ending</h4>
-            <p>    
-                Then the king pronounced his verdict, each of you has an equal right,
-                and as all of you cannot have the maiden, none of you shall have her,
-                but I will give to each of you, as a reward, half a kingdom.  The
-                brothers were pleased with this decision, and said, it is better thus
-                than that we should be at variance with each other.  Then each of
-                them received half a kingdom, and they lived with their father in the
-                greatest happiness as long as it pleased God.
-            </p>
-            <h3><u>The End</u></h3>
+            <h2 class="title">The Four Skillfull Brothers</h2>
+            <details>
+                <summary>Summary</summary>
+                A poor old father sent his sons out to learn trades. Each one met a man and was persuaded to learn the trade of the man whom he had met. In this manner, the oldest son became a thief, the second an astronomer, the third a huntsman, the fourth a tailor. When they returned, their father put them to the test. He asked his second son how many eggs there were in a nest, high on the tree, and the second son used his telescope to tell him five. Next, the eldest son climbed the tree and stole the eggs without the birds even being aware, and the third son shot all five eggs with one shot. The fourth son sewed both the shattered eggs and the chicks inside them back together, so that when the eldest put the eggs back in the nest, again without the mother bird noticing, they hatched with the only sign being some red thread about their necks.
+                Not long after, the King's Daughter was kidnapped by a Dragon. The brothers set out to rescue her. The astronomer used his telescope to find her, and asked for a ship to reach where she was held captive. The huntsman at first did not dare shoot the dragon, for fear of harming the princess as well. The thief instead stole her away, and they all set out to return to the king. The dragon followed, and this time the huntsman killed him - but when the dragon fell into the ocean, the resulting wave swamped the boat and smashed it to pieces. Finally, the tailor saved them all by sewing the boat back together.
+                The king did not know which man to give his daughter to, because each one had played an essential part in the rescue. He instead gave them a quarter of the kingdom each, and they agreed that that was better than their quarreling.
+            </details>
         </section>
     </main>
     <footer>
-        <!-- <details>
-            <summary><u>Summary</u></summary>
-            A poor old father sent his sons out to learn trades. Each one met a man and was persuaded to learn the trade of the man whom he had met. In this manner, the oldest son became a thief, the second an astronomer, the third a huntsman, the fourth a tailor. When they returned, their father put them to the test. He asked his second son how many eggs there were in a nest, high on the tree, and the second son used his telescope to tell him five. Next, the eldest son climbed the tree and stole the eggs without the birds even being aware, and the third son shot all five eggs with one shot. The fourth son sewed both the shattered eggs and the chicks inside them back together, so that when the eldest put the eggs back in the nest, again without the mother bird noticing, they hatched with the only sign being some red thread about their necks.
-            Not long after, the King's Daughter was kidnapped by a Dragon. The brothers set out to rescue her. The astronomer used his telescope to find her, and asked for a ship to reach where she was held captive. The huntsman at first did not dare shoot the dragon, for fear of harming the princess as well. The thief instead stole her away, and they all set out to return to the king. The dragon followed, and this time the huntsman killed him - but when the dragon fell into the ocean, the resulting wave swamped the boat and smashed it to pieces. Finally, the tailor saved them all by sewing the boat back together.
-            The king did not know which man to give his daughter to, because each one had played an essential part in the rescue. He instead gave them a quarter of the kingdom each, and they agreed that that was better than their quarreling.
-        </details> -->
+        <h3><a href="./html/contact.html">Contact Us</a></h3>
     </footer>
 </body>
 </html>
