--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="home">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,9 @@
     <title>Grimm's Fairy Tales</title>
     <link rel="stylesheet" href="./styles/styles.css"/>
     <link rel="normalize" href="./css/normalize.css"/>
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Playfair+Display">
 </head>
-<body>
+<body class="home">
     <header>
         <div class="logo"><img src="./images/logo.png"></div>
         <nav>
@@ -19,15 +20,12 @@
     </header>
     <main>
         <section>
-            <h2 class="title">The Four Skillfull Brothers</h2>
-            <details>
-                <summary>Summary</summary>
-                A poor old father sent his sons out to learn trades. Each one met a man and was persuaded to learn the trade of the man whom he had met. In this manner, the oldest son became a thief, the second an astronomer, the third a huntsman, the fourth a tailor. When they returned, their father put them to the test. He asked his second son how many eggs there were in a nest, high on the tree, and the second son used his telescope to tell him five. Next, the eldest son climbed the tree and stole the eggs without the birds even being aware, and the third son shot all five eggs with one shot. The fourth son sewed both the shattered eggs and the chicks inside them back together, so that when the eldest put the eggs back in the nest, again without the mother bird noticing, they hatched with the only sign being some red thread about their necks.
-                Not long after, the King's Daughter was kidnapped by a Dragon. The brothers set out to rescue her. The astronomer used his telescope to find her, and asked for a ship to reach where she was held captive. The huntsman at first did not dare shoot the dragon, for fear of harming the princess as well. The thief instead stole her away, and they all set out to return to the king. The dragon followed, and this time the huntsman killed him - but when the dragon fell into the ocean, the resulting wave swamped the boat and smashed it to pieces. Finally, the tailor saved them all by sewing the boat back together.
-                The king did not know which man to give his daughter to, because each one had played an essential part in the rescue. He instead gave them a quarter of the kingdom each, and they agreed that that was better than their quarreling.
-            </details>
+            <h2 class="welcome">Welcome to<br>Grimm's Fairy Tales</h2>
+            <p>Where stories come to life</p>
         </section>
     </main>
+    <div class="oval"></div>
+    <div class="oval2"></div>
     <footer>
         <h3><a href="./html/contact.html">Contact Us</a></h3>
     </footer>
