added content to about us and styled it

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Grimm's Fairy Tales</title>
-    <link rel="stylesheet" href="../styles/styles.css"/>
-    <link rel="normalize" href="../css/normalize.css"/>
+    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="normalize" href="../css/normalize.css" />
 </head>
+
 <body class="about-us">
     <header>
         <div class="logo"><a href="../index.html"><img src="../images/logo.png"></a></div>
         <nav>
-            <h3><a href="./about-us.html">About Us</a></h3> 
-            <h3><a href="./chapter.html">Chapters</a></h3> 
+            <h3><a href="./about-us.html">About Us</a></h3>
+            <h3><a href="./chapter.html">Chapters</a></h3>
             <h3><a href="./stories.html">More Stories</a></h3>
         </nav>
     </header>
@@ -22,9 +24,54 @@
             <h2>Jacob & Wilhelm</h2>
             <img class="brothers" src="../images/brothers.PNG">
         </section>
+        <section class="content">
+            <h4>What we're about</h4>
+            <p>The Brothers Grimm, Jacob Grimm and Wilhelm Grimm, were German academics, cultural researchers,
+                linguists, lexicographers, folklore collectors and writers. They established a methodology for
+                collecting and recording folk stories that became the foundation for folklore studies.</p>
+        </section>
+        <section class="content">
+            <h4>Our humble beginings</h4>
+            <p>Both brothers were born and raised in Hanau in the Landgraviate of Hesse–Kassel within the Holy Roman
+                Empire, in present–day Germany. Jacob was born on January 4, 1785 and Wilhelm was born the following
+                year on February 24, 1786. They were born to Phillip Wilhelm Grimm and Dorothea Grimm and were the two
+                eldest siblings out of nine. In 1791, the family moved to the countryside in a town called Steinau,
+                where the brothers enjoyed playing in the open fields surrounding their home. They got a strict Lutheran
+                education at home from private tutors, and later attended local schools. <br>In 1798, he and Wilhelm
+                left their family to attend Friedrichsgymnasium in Kassel, a school that focused on music and foreign
+                language. The two brothers became particularly close during this time.
+
+                Upon graduation, they both went on to attend the University of Marburg to study law, like their father.
+            </p>
+            <p>After their time at University of Marburg, the brothers split up for some time. Jacob accepted a job in
+                Paris as a research assistant to provide for the rest of his family. He went on to become a librarian in
+                Kassel, where Wilhelm joined him after seeking treatments for his heart and respiratory ailments. At
+                this time, they also began to collect old books and ask friends and acquaintances to tell them tales,
+                which they gathered and intended to use to write a book on German history. In 1830, they moved to
+                Göttingen, where they both got jobs at the University of Göttingen, Jacob as a professor and head
+                librarian, and Wilhelm as a professor.</p>
+        </section>
+        <section class="content">
+            <h4>Our stories</h4>
+            <p>Grimm's Fairy Tales was originally published as Children's and Household Tales in 1812. It contained 86
+                stories, and by the seventh edition in 1857, it contained over 200 unique fairy tales. The stories were
+                about German families and children and the ways in which they reacted to their circumstances, and the
+                moral messages these stories contained derived from a German oral tradition that the Grimms brothers
+                wanted to preserve. Later, any mention of fairies was omitted, as they were seen as being ''too
+                French.'' In this way, they also participated in the wider effort of the time to oppose French
+                domination.
+
+                The Grimms brothers strongly believed that the purest form of culture was linguistic and history–based.
+                They saw the violent and disturbing aspects of the stories as reflections of the culture, which often
+                emphasized teaching obedience through fear. However, as new editions of the book were released, they
+                removed major disturbing scenes and events to make the stories more palatable for children.
+
+            </p>
+        </section>
     </main>
     <footer>
         <h3><a href="./contact.html">Contact Us</a></h3>
     </footer>
 </body>
+
 </html>
